# AI_Secretary

./: .env.example  .gitignore  README.md  pyproject.toml
src/secretary/: config.py  main.py  platform_dirs.py
src/secretary/agent/: commands.py  loop.py  registry.py
src/secretary/agent/providers/: __init__.py  base.py  claude.py  gemini.py  groq.py
src/secretary/auth/: google.py  keys.py
src/secretary/integrations/: calendar.py  gmail.py
src/secretary/storage/: db.py  models.py
src/secretary/ui/: authenticate.py  console.py
