[project]
name = "secretary"
version = "0.1.0"
description = "Local terminal-based AI Secretary with Google Calendar and Gmail integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "anthropic>=0.28",
    "pydantic-settings>=2.3",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.134",
    "keyring>=25.2",
    "cryptography>=42.0",
    "questionary>=2.1.1",
    "groq>=1.2.0",
    "google-genai>=2.6.0",
]

[project.scripts]
sec = "secretary.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secretary"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
